2006-03-17  Sebastien Pouliot  <sebastien@ximian.com>

	* NewLineLiteralTest.cs: New. Unit tests for the NewLineLiteralRule.